# FoneDB

./: .gitignore  LICENSE  README.md  phones.db  pyproject.toml  start.py
fonedb/: __init__.py  api.py  configs.py  http_client.py  objects.py  storage.py  utils.py
