[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fonedb"
version = "1.0.0"
description = "A simple script to scrape and collect smartphone specifications from PhoneDB automatically."
authors = [
    { name = "Abbas Bachari", email = "abbas-bachari@hotmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "fonedb>=1.0.1",
]

keywords = ["PhoneDB", "API", "Phone","Database","Devece", "Python"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage      = "https://github.com/abbas-bachari/fonedb"
documentation = "https://github.com/abbas-bachari/fonedb#readme"
bug-tracker   = "https://github.com/abbas-bachari/fonedb/issues"
